--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -15,6 +15,11 @@
                 android:icon="@drawable/ic_menu_share"
                 android:title="Cadastrar Cliente"/>
 
+        <item
+                android:id="@+id/nav_departamento"
+                android:icon="@drawable/ic_menu_share"
+                android:title="Departamentos"/>
+
     </group>
 
 
