--- a/app/src/main/res/layout/activity_cadastrar_cliente.xml
+++ b/app/src/main/res/layout/activity_cadastrar_cliente.xml
@@ -12,7 +12,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
             <TextView   android:id="@+id/textViewDadosPessoais"
                         android:layout_width="match_parent"
@@ -72,7 +72,7 @@
                       android:hint="@string/cliente_dataNascimento"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
-                      android:inputType="date"
+                      android:inputType="text"
                       android:layout_marginTop="8dp"
                       app:layout_constraintTop_toBottomOf="@+id/editTextCPF"
                       app:layout_constraintStart_toStartOf="parent"
