Cadastro de Produto

--- a/app/src/main/res/layout/activity_cadastrar_cliente.xml
+++ b/app/src/main/res/layout/activity_cadastrar_cliente.xml
@@ -17,6 +17,7 @@
             <TextView   android:id="@+id/textViewDadosPessoais"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/primary_text"
                         android:text="@string/cliente_sessao_dados_pessoais"
                         android:textAllCaps="true"
                         android:textStyle="bold"
@@ -81,6 +82,7 @@
             <TextView   android:id="@+id/textViewEndereco"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/primary_text"
                         android:text="@string/cliente_sessao_endereco"
                         android:textAllCaps="true"
                         android:textStyle="bold"
