--- a/app/src/main/res/layout/activity_departamento.xml
+++ b/app/src/main/res/layout/activity_departamento.xml
@@ -8,44 +8,83 @@
         tools:context="br.com.rm.cfv.activities.departamento.DepartamentoActivity"
         android:padding="16dip">
 
+    <androidx.cardview.widget.CardView android:layout_width="match_parent"
+                                       android:layout_height="wrap_content"
+                                       app:layout_constraintTop_toTopOf="parent"
+                                       app:layout_constraintStart_toStartOf="parent"
+                                       app:layout_constraintEnd_toEndOf="parent"
+                                       app:cardCornerRadius="3dp"
+                                       app:cardElevation="4dp"
+                                       app:cardUseCompatPadding="true">
 
-    <EditText android:id="@+id/editTextDepartNome"
-              android:layout_width="280dip"
-              android:layout_height="wrap_content"
-              android:hint="@string/nome_do_departamento"
-              app:layout_constraintStart_toStartOf="parent"
-              android:layout_marginStart="8dp"
-              android:layout_marginTop="8dp"
-              app:layout_constraintTop_toTopOf="parent"
-              app:layout_constraintEnd_toStartOf="@+id/buttonAddDepart"
-              android:layout_marginEnd="8dp"/>
+        <LinearLayout android:orientation="vertical"
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:padding="16dp">
 
-    <Button android:id="@+id/buttonAddDepart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:textColor="@android:color/white"
-            android:text="@string/salvar"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
+            <TextView android:id="@+id/textViewItemValor"
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:textColor="@color/primary_text"
+                      android:textStyle="bold"
+                      style="bold"
+                      android:textSize="16sp"
+                      android:text="Adicionar departamento"
+                      android:textAllCaps="true"
+                        android:layout_marginBottom="8dp"/>
+
+            <LinearLayout android:orientation="vertical"
+                          android:layout_width="match_parent"
+                          android:layout_height="wrap_content">
+
+                <EditText android:id="@+id/editTextDepartNome"
+                          android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:layout_weight="8"
+                          android:hint="@string/nome_do_departamento"
+                          android:layout_marginTop="8dp"/>
+
+                <Button android:id="@+id/buttonAddDepart"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:background="@android:color/transparent"
+                        android:textColor="@color/colorPrimary"
+                        android:layout_gravity="right"
+                        android:text="@string/salvar"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="match_parent"
-                  android:layout_marginTop="80dip"
-                  android:orientation="vertical" android:layout_marginBottom="8dp"
-                  app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-                  android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                  android:layout_marginEnd="8dp">
+                  android:layout_marginTop="180dip"
+                  android:orientation="vertical"
+                  android:layout_marginBottom="8dp"
+                  app:layout_constraintBottom_toBottomOf="parent"
+                  app:layout_constraintStart_toStartOf="parent"
+                  app:layout_constraintEnd_toEndOf="parent">
+
+        <androidx.cardview.widget.CardView android:layout_width="match_parent"
+                                           android:layout_height="match_parent"
+                                           app:cardCornerRadius="3dp"
+                                           app:cardElevation="4dp"
+                                           app:cardUseCompatPadding="true">
 
         <ListView
                 android:id="@+id/listViewDepartamentos"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:divider="@color/colorPrimary"
-                android:dividerHeight="1px"
+                android:layout_margin="8dp"
+                android:divider="@android:color/transparent"
                 tools:listitem="@layout/list_view_item_default"
                 tools:listheader="@layout/list_view_header_default"/>
+
+
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
