--- a/app/src/main/res/layout/recycler_view_item_default.xml
+++ b/app/src/main/res/layout/recycler_view_item_default.xml
@@ -12,25 +12,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="8dip"
-            android:paddingBottom="8dp">
+            android:paddingBottom="8dip">
 
-        <TextView android:id="@+id/textViewItemNome"
+        <TextView android:id="@+id/textViewPrimary"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="Nome"
-                  android:layout_marginTop="8dp"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   android:layout_marginStart="8dp"
                   android:textSize="16sp"
                   android:textColor="@android:color/black"/>
 
-        <TextView android:id="@+id/textViewItemTelefone"
+        <TextView android:id="@+id/textViewItemSecondary"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="Nome"
                   android:layout_marginTop="8dp"
-                  app:layout_constraintTop_toBottomOf="@+id/textViewItemNome"
+                  app:layout_constraintTop_toBottomOf="@+id/textViewPrimary"
                   app:layout_constraintStart_toStartOf="parent"
                   android:layout_marginStart="8dp"/>
 
