--- a/app/src/main/res/layout/activity_departamento.xml
+++ b/app/src/main/res/layout/activity_departamento.xml
@@ -5,74 +5,16 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="br.com.rm.cfv.activities.departamento.DepartamentoActivity"
-        android:padding="16dip">
-
-    <androidx.cardview.widget.CardView android:layout_width="match_parent"
-                                       android:layout_height="wrap_content"
-                                       app:layout_constraintTop_toTopOf="parent"
-                                       app:layout_constraintStart_toStartOf="parent"
-                                       app:layout_constraintEnd_toEndOf="parent"
-                                       app:cardCornerRadius="3dp"
-                                       app:cardElevation="4dp"
-                                       app:cardUseCompatPadding="true">
-
-        <LinearLayout android:orientation="vertical"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:padding="16dp">
-
-            <TextView android:id="@+id/textViewItemValor"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:textColor="@color/primary_text"
-                      android:textStyle="bold"
-                      style="bold"
-                      android:textSize="16sp"
-                      android:text="Adicionar departamento"
-                      android:textAllCaps="true"
-                        android:layout_marginBottom="8dp"/>
-
-            <LinearLayout android:orientation="vertical"
-                          android:layout_width="match_parent"
-                          android:layout_height="wrap_content">
-
-                <EditText android:id="@+id/editTextDepartNome"
-                          android:layout_width="match_parent"
-                          android:layout_height="wrap_content"
-                          android:layout_weight="8"
-                          android:hint="@string/nome_do_departamento"
-                          android:layout_marginTop="8dp"/>
-
-                <Button android:id="@+id/buttonAddDepart"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:background="@android:color/transparent"
-                        android:textColor="@color/colorPrimary"
-                        android:layout_gravity="right"
-                        android:text="@string/salvar"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
+        tools:context="br.com.rm.cfv.activities.departamento.DepartamentoActivity">
 
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="match_parent"
-                  android:layout_marginTop="180dip"
                   android:orientation="vertical"
                   android:layout_marginBottom="8dp"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
-                  app:layout_constraintEnd_toEndOf="parent">
-
-        <androidx.cardview.widget.CardView android:layout_width="match_parent"
-                                           android:layout_height="match_parent"
-                                           app:cardCornerRadius="3dp"
-                                           app:cardElevation="4dp"
-                                           app:cardUseCompatPadding="true">
+                  app:layout_constraintEnd_toEndOf="parent"
+                  android:padding="16dip">
 
         <ListView
                 android:id="@+id/listViewDepartamentos"
@@ -80,13 +22,101 @@
                 android:layout_height="match_parent"
                 android:layout_margin="8dp"
                 android:divider="@android:color/transparent"
-                tools:listitem="@layout/list_view_item_default"
+                tools:listitem="@layout/recycler_view_item_default"
                 tools:listheader="@layout/list_view_header_default"/>
 
+    </LinearLayout>
+
+    <FrameLayout android:id="@+id/framelayout_cad_departamento"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 android:background="@color/bg_black_transparencia"
+                 app:layout_constraintTop_toTopOf="parent"
+                 app:layout_constraintStart_toStartOf="parent"
+                 app:layout_constraintEnd_toEndOf="parent"
+                 android:padding="32dip">
+
+        <androidx.cardview.widget.CardView android:layout_width="match_parent"
+                                           android:layout_height="wrap_content"
+                                           app:cardCornerRadius="3dp"
+                                           app:cardElevation="4dp"
+                                           app:cardUseCompatPadding="true"
+                                            android:layout_gravity="center">
+
+            <LinearLayout android:orientation="vertical"
+                          android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:padding="16dp">
+
+                <TextView android:id="@+id/textViewItemValor"
+                          android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:textColor="@color/primary_text"
+                          android:textStyle="bold"
+                          style="bold"
+                          android:textSize="16sp"
+                          android:text="Adicionar departamento"
+                          android:textAllCaps="true"
+                          android:layout_marginBottom="8dp"/>
+
+
+                <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/textInputLayoutDepartamentoPai"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp">
+
+                    <AutoCompleteTextView android:id="@+id/autocompleteTextViewDepartamentoPai"
+                                          android:layout_width="match_parent"
+                                          android:layout_height="wrap_content"
+                                          android:hint="Nome do departamento Pai"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/textInputLayoutDepartamento"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp">
+
+                    <com.google.android.material.textfield.TextInputEditText android:id="@+id/textViewDepartamento"
+                                          android:layout_width="match_parent"
+                                          android:layout_height="wrap_content"
+                                          android:hint="Nome do departamento"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+                <LinearLayout android:orientation="horizontal"
+                              android:layout_width="match_parent"
+                              android:layout_height="wrap_content"
+                              android:layout_marginTop="16dip">
+
+                    <Button android:id="@+id/buttonCancel"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="2"
+                            android:background="@android:color/transparent"
+                            android:textColor="@color/secondary_text"
+                            android:layout_gravity="left"
+                            android:text="@string/cancelar"/>
+
+                    <Button android:id="@+id/buttonAddDepart"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="2"
+                            android:background="@android:color/transparent"
+                            android:textColor="@color/colorPrimary"
+                            android:layout_gravity="right"
+                            android:text="@string/salvar"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
 
         </androidx.cardview.widget.CardView>
 
-    </LinearLayout>
+    </FrameLayout>
 
 
 
