--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,17 +8,22 @@
         <item
                 android:id="@+id/nav_main"
                 android:icon="@drawable/account_black_24dp"
-                android:title="Listar Clientes"/>
-
-        <item
-                android:id="@+id/nav_second"
-                android:icon="@drawable/account_white_24dp"
-                android:title="Cadastrar Cliente"/>
+                android:title="Clientes"/>
 
         <item
                 android:id="@+id/nav_departamento"
                 android:icon="@drawable/shape_white_24dp"
                 android:title="Departamentos"/>
+
+        <item
+                android:id="@+id/nav_produto"
+                android:icon="@drawable/tag_white_24dp"
+                android:title="Produtos"/>
+
+        <item
+                android:id="@+id/nav_estoque"
+                android:icon="@drawable/tag_plus_white_24dp"
+                android:title="Estoque"/>
 
     </group>
 
