--- a/app/src/main/res/layout/activity_cadastrar_produto.xml
+++ b/app/src/main/res/layout/activity_cadastrar_produto.xml
@@ -11,12 +11,37 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        <ImageView android:layout_width="100dip"
-                   android:layout_height="100dip"
+        <ImageView android:id="@+id/imageViewProduto"
+                   android:layout_width="200dip"
+                   android:layout_height="200dip"
                    android:layout_gravity="center"
                    android:scaleType="center"
-                   app:srcCompat="@drawable/tag_black_24dp"
-                    android:layout_marginBottom="8dp"/>
+                   app:srcCompat="@mipmap/ic_launcher"
+                   android:layout_marginBottom="8dp"/>
+
+        <TextView android:id="@+id/textViewEditarImagem"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Editar Imagem"
+                android:textAlignment="center"
+                android:textColor="@color/accent"
+                android:layout_marginBottom="8dp"/>
+
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textInputLayoutId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp">
+
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/textInputEditId"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:enabled="false"
+                    android:visibility="gone"
+                    android:hint="Id"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputLayoutCodigo"
