--- a/app/src/main/res/layout/activity_departamento.xml
+++ b/app/src/main/res/layout/activity_departamento.xml
@@ -106,7 +106,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="2"
                             android:background="@android:color/transparent"
-                            android:textColor="@color/colorPrimary"
+                            android:textColor="@color/primary"
                             android:layout_gravity="right"
                             android:text="@string/salvar"/>
 
