--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -4,7 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="@dimen/nav_header_height"
-        android:background="@color/accent"
+        android:background="@color/primary"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
@@ -14,14 +14,11 @@
         android:gravity="bottom">
 
     <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/nav_header_vertical_spacing"
-            android:scaleX="1.5"
-            android:scaleY="1.5"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
             android:layout_marginStart="12dp"
             android:layout_marginBottom="8dp"
-            app:srcCompat="@mipmap/ic_launcher_round"
+            app:srcCompat="@drawable/ic_logo_app"
             android:contentDescription="@string/nav_header_desc"
             android:id="@+id/imageView"/>
 
