--- a/app/src/main/res/layout/recycler_view_item_default.xml
+++ b/app/src/main/res/layout/recycler_view_item_default.xml
@@ -14,7 +14,7 @@
             android:paddingTop="8dip"
             android:paddingBottom="8dip">
 
-        <TextView android:id="@+id/textViewPrimary"
+        <TextView android:id="@+id/textViewNome"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="Nome"
@@ -24,12 +24,12 @@
                   android:textSize="16sp"
                   android:textColor="@android:color/black"/>
 
-        <TextView android:id="@+id/textViewItemSecondary"
+        <TextView android:id="@+id/textViewItemCodigo"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="Nome"
                   android:layout_marginTop="8dp"
-                  app:layout_constraintTop_toBottomOf="@+id/textViewPrimary"
+                  app:layout_constraintTop_toBottomOf="@+id/textViewNome"
                   app:layout_constraintStart_toStartOf="parent"
                   android:layout_marginStart="8dp"/>
 
