--- a/app/src/main/res/layout/content_registrar_debito_adicionar_produto.xml
+++ b/app/src/main/res/layout/content_registrar_debito_adicionar_produto.xml
@@ -3,27 +3,23 @@
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             android:background="@color/bg_black_transparencia"
-             app:layout_constraintTop_toTopOf="parent"
-             app:layout_constraintStart_toStartOf="parent"
-             app:layout_constraintEnd_toEndOf="parent"
-             android:padding="16dip">
+             android:background="@android:color/white"
+             android:padding="16dp">
 
-    <androidx.cardview.widget.CardView android:layout_width="match_parent"
-                                       android:layout_height="wrap_content"
-                                       app:cardCornerRadius="3dp"
-                                       app:cardElevation="4dp"
-                                       app:cardUseCompatPadding="true"
-                                       android:layout_gravity="center">
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
         <LinearLayout android:orientation="vertical"
                       android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:padding="16dp">
+                      android:layout_height="match_parent"
+                      app:layout_constraintTop_toTopOf="parent"
+                      app:layout_constraintStart_toStartOf="parent"
+                      app:layout_constraintEnd_toEndOf="parent">
 
             <LinearLayout android:layout_width="match_parent"
                           android:layout_height="wrap_content"
-                            android:layout_marginBottom="16dp">
+                          android:layout_marginBottom="16dp">
 
                 <TextView android:id="@+id/textViewItemNomeProduto"
                           android:layout_width="wrap_content"
@@ -69,11 +65,11 @@
                           android:layout_height="wrap_content">
 
                 <Button
-                    android:id="@+id/buttonDecrementarQuantidade"
-                    android:text="-"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/shape_button_rounded_accent"/>
+                        android:id="@+id/buttonDecrementarQuantidade"
+                        android:text="-"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:background="@drawable/shape_button_rounded_accent"/>
 
                 <EditText
                         android:id="@+id/textInputQuantidade"
@@ -97,25 +93,24 @@
             </LinearLayout>
 
             <TextView
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:textColor="@color/secondary_text"
-                      android:textSize="14sp"
-                      android:layout_marginBottom="8dp"
-                      android:layout_marginTop="16dp"
-                      android:text="@string/aplicar_desconto_acrescimo"
-                      android:textAllCaps="true"/>
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/secondary_text"
+                    android:textSize="14sp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginTop="16dp"
+                    android:text="@string/aplicar_desconto_acrescimo"
+                    android:textAllCaps="true"/>
 
             <LinearLayout android:layout_width="match_parent"
                           android:layout_height="wrap_content"
-                          android:orientation="horizontal">
+                          android:orientation="vertical">
 
                 <RadioGroup android:id="@+id/radioGroupAcresDesc"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.8"
-                        android:layout_marginEnd="8dp"
-                        android:orientation="vertical">
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="8dp"
+                            android:orientation="vertical">
 
                     <RadioButton android:id="@+id/radioDesconto"
                                  android:layout_width="match_parent"
@@ -128,27 +123,28 @@
                                  android:text="@string/acrescimo"/>
                 </RadioGroup>
 
-                <EditText android:id="@+id/editTextItemDescAcresc"
-                          android:layout_width="0dp"
-                          android:layout_height="wrap_content"
-                          android:layout_gravity="bottom"
-                          android:layout_weight="1.2"
-                          android:inputType="numberDecimal"
-                          android:enabled="false"
-                          android:maxLines="1"
-                          android:imeActionLabel="OK"
-                          android:imeOptions="actionDone"
-                          android:hint="Valor desc./acresc."/>
-
-                <LinearLayout android:layout_width="wrap_content"
+                <LinearLayout android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:orientation="horizontal"
                               android:layout_marginBottom="8dp"
-                              android:layout_gravity="bottom">
+                              android:weightSum="9">
+
+                    <EditText android:id="@+id/editTextItemDescAcresc"
+                              android:layout_width="0dp"
+                              android:layout_height="wrap_content"
+                              android:layout_weight="7"
+                              android:layout_gravity="bottom"
+                              android:inputType="numberDecimal"
+                              android:enabled="false"
+                              android:maxLines="1"
+                              android:imeActionLabel="OK"
+                              android:imeOptions="actionDone"
+                              android:hint="Valor desc./acresc."/>
 
                     <ImageButton android:id="@+id/imageButtonCancelDescAcresc"
-                                 android:layout_width="30dip"
+                                 android:layout_width="0dp"
                                  android:layout_height="30dip"
+                                 android:layout_weight="1"
                                  android:layout_marginEnd="16dp"
                                  android:layout_gravity="end|bottom"
                                  android:scaleType="center"
@@ -156,18 +152,19 @@
                                  app:srcCompat="@drawable/close"
                                  app:layout_constraintStart_toStartOf="parent"
                                  app:layout_constraintTop_toTopOf="parent"
-                                 android:enabled = "false"/>
+                                 android:enabled="false"/>
 
                     <ImageButton android:id="@+id/imageButtonConfirmDescAcresc"
-                                 android:layout_width="30dip"
+                                 android:layout_width="0dp"
                                  android:layout_height="30dip"
+                                 android:layout_weight="1"
                                  android:layout_gravity="end|bottom"
                                  android:scaleType="center"
                                  android:background="@drawable/shape_button_rounded_accent"
                                  app:srcCompat="@drawable/check"
                                  app:layout_constraintStart_toStartOf="parent"
                                  app:layout_constraintTop_toTopOf="parent"
-                                 android:enabled = "false"/>
+                                 android:enabled="false"/>
 
                 </LinearLayout>
 
@@ -186,7 +183,7 @@
                           android:layout_gravity="end"
                           style="bold"
                           android:textSize="14sp"
-                          android:text="@string/subtotal"
+                          android:text="@string/label_subtotal"
                           android:textAllCaps="true"
                           android:layout_marginEnd="8dp"
                           android:layout_marginBottom="8dp"/>
@@ -202,40 +199,42 @@
                           android:textStyle="bold"
                           style="bold"
                           android:textSize="20sp"
-                          android:text="@string/subtotal"
+                          android:text="@string/label_subtotal"
                           android:textAllCaps="true"
                           android:layout_marginEnd="8dp"/>
 
             </LinearLayout>
 
+        </LinearLayout>
 
-            <LinearLayout android:orientation="horizontal"
-                          android:layout_width="match_parent"
-                          android:layout_height="wrap_content"
-                          android:layout_marginTop="24dip">
+        <LinearLayout android:orientation="horizontal"
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      app:layout_constraintBottom_toBottomOf="parent"
+                      app:layout_constraintEnd_toEndOf="parent"
+                      app:layout_constraintStart_toStartOf="parent">
 
-                <Button android:id="@+id/buttonCancelarProduto"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:background="@android:color/transparent"
-                        android:textColor="@color/secondary_text"
-                        android:layout_gravity="start"
-                        android:text="@string/cancelar"/>
+            <Button android:id="@+id/buttonCancelarProduto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:background="@android:color/transparent"
+                    android:textColor="@color/secondary_text"
+                    android:layout_gravity="start"
+                    android:text="@string/cancelar"/>
 
-                <Button android:id="@+id/buttonAdicionarProduto"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:background="@android:color/transparent"
-                        android:textColor="@color/primary"
-                        android:layout_gravity="end"
-                        android:text="@string/adicionar_produto"/>
-
-            </LinearLayout>
+            <Button android:id="@+id/buttonAdicionarProduto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle=""
+                    android:layout_weight="2"
+                    android:background="@android:color/transparent"
+                    android:textColor="@color/primary"
+                    android:layout_gravity="end"
+                    android:text="@string/adicionar_produto"/>
 
         </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
