--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,9 +4,13 @@
     <color name="primary_dark">#3D3D3D</color>
     <color name="primary_light">#00FF00</color>
     <color name="accent">#00DDFF</color>
+    <color name="accent_active">#63E7FF</color>
     <color name="primary_text">#BDBDBD</color>
     <color name="secondary_text">#000000</color>
     <color name="icons">#FFFFFF</color>
     <color name="divider">#BDBDBD</color>
     <color name="bg_black_transparencia">#D2000000</color>
+    <color name="color_success">#16FF2D</color>
+    <color name="color_error">#FF1616</color>
+    <color name="color_alert">#FFBD16</color>
 </resources>
