--- a/app/src/main/res/layout/content_registrar_debito_produtos.xml
+++ b/app/src/main/res/layout/content_registrar_debito_produtos.xml
@@ -5,7 +5,8 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-                android:background="@android:color/white">
+                android:background="@android:color/white"
+        android:paddingBottom="78dp">
 
     <EditText android:id="@+id/editTextSearch"
             android:layout_width="match_parent"
@@ -35,7 +36,7 @@
             android:id="@+id/recyclerViewProdutos"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="100dp"
             tools:listitem="@layout/recycler_view_item_produto"
             app:layout_constraintTop_toBottomOf="@+id/textViewSugestao"/>
 
