--- a/app/src/main/res/layout/dialog_layout_error.xml
+++ b/app/src/main/res/layout/dialog_layout_error.xml
@@ -5,7 +5,7 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:elevation="2dp"
-              android:background="@drawable/shape_rectangule_rounded_white" >
+              android:background="#fff" >
 
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="wrap_content"
